/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package Proxy;

import Estudiantes.Estudiante;

/**
 *
 * @author Esteban
 */
public abstract class Subject {
    public abstract void verificarBeca(Estudiante estudiante);
}

